--- a/index.html
+++ b/index.html
@@ -916,29 +916,29 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Sai Nadella" data-position="top" data-tooltip="Call Sai Nadella"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Sai Nadella">+1 (240) 278-8593</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Sai Nadella" href="mailto:ft44056@umbc.edu" target="_blank" data-position="top"
+            data-tooltip="Email Sai Nadella" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Sai Nadella" href="mailto:ft44056@umbc.edu"
+              class="hoverline">ft44056@umbc.edu</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Sai Nadella on GitHub" href="http://github.com/saimanvithanadella" target="_blank"
+            data-position="top" data-tooltip="View Sai on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Sai Nadella on Github" href="http://github.com/saimanvithanadella" class="hoverline"
+              target="_blank">github.com/saimanvithanadella</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Sai Nadella on LinkedIn" href="http://linkedin.com/in/saimanvithanadella" target="_blank"
+            data-position="top" data-tooltip="View Sai Nadella on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Sai Nadella on LinkedIn" href="http://linkedin.com/in/saimanvithanadella"
+              class="hoverline" target="_blank">linkedin.com/in/saimanvithanadella</a></a>
         </p>
       </div>
     </section>
@@ -948,7 +948,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Python Developer", "AI Engineer", "Data Analyst", "Adaptive Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
